[tool.poetry]
name = "LangChainStreamlit"
version = "0.1.0"
description = ""
authors = ["Kentaro Kato <ken.k.jul2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.26.0"
langchain = "^0.0.272"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
